--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="assets/script/main.js" defer></script>
 </head>
 
 <body>
-<p>hello world</p>
+    <p>hello world</p>
+    <button id="alg1"></button>
 </body>
 
 </html>
