--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body>
     <p>hello world</p>
-    <button id="alg1"></button>
+    <button id="alg1">Insertion Sort</button>
+    <button id="alg2">Merge Sort</button>
 </body>
 
 </html>
