--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
                     <div class="dropdown-content">
                         <button id="alg1">Insertion Sort</button>
                         <button id="alg2">Merge Sort</button>
+                        <button id="alg3">Quick Sort</button>
+                        <button id="alg4">Heap Sort</button>
                     </div>
                 </div>
                 <button class="btn-p">About</button>
