--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <button id="alg3">Quick Sort</button>
             </div>
           </div>
-          <div class="dropdown">
+          <div class="dropdown-s">
           <button class="btn-p">About</button>
           <div class="dropdown-content-about">
             <p>This App is a sort machine that takes numbers in an array and returns them sorted.</p>
