--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
               <button id="alg1">Insertion Sort</button>
               <button id="alg2">Merge Sort</button>
               <button id="alg3">Quick Sort</button>
+              <button id="alg4">Heap Sort</button>
             </div>
           </div>
           <div class="dropdown-s">
