--- a/index.html
+++ b/index.html
@@ -31,11 +31,17 @@
                         <button id="alg4">Heap Sort</button>
                     </div>
                 </div>
-                <button class="btn-p">About</button>
+                <div class="dropdown-s">
+                    <button class="btn-p">About</button>
+                    <div class="dropdown-content-about">
+                        <p>This App is a sort machine that takes numbers in an array and returns them sorted.</p>
+                        <button><a href="https://github.com/KhashayarB">My GitHub</a></button>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <div class="row sort-box mt-4">
+        <div class="row sort-box mt-4 py-5">
             <div class="col-md-12 d-flex justify-content-start gap-4">
                 <button class="btn-p">Run</button>
                 <button class="btn-p">Reset</button>
